src/components/Layout/Header.module.scss
.Header {
  color: var(--color-primary);
  display: flex;
  flex-direction: column;
  align-items: center;

  @media (min-width: 650px) {
    flex-direction: row;
  }
}

.LogoWrapper {
  margin: 0;
}

.Logo {
  background-color: black;
  color: var(--color-primary);
  margin: 0;
  font-size: var(--fontSize-4);
  font-weight: var(--fontWeight-bold);
  transform: skew(-7deg);
  border-radius: 4px;

  text-decoration: none;
  display: block;
  padding: 0.5rem 1rem;
  text-align: center;
}

.RightSide {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  margin-top: 30px;
  @media (min-width: 650px) {
    flex-direction: row;
    margin-top: 0;
    margin-left: auto;
  }
}

.Navigation {
  display: flex;
  gap: 15px;

  @media (min-width: 650px) {
    margin-right: 20px;
  }

  a {
    text-decoration: none;
    font-weight: var(--fontWeight-bold);
    text-transform: uppercase;
  }
}

.Balance {
  color: var(--color-heading);
  padding: 10px;
  span {
    font-weight: var(--fontWeight-bold);
  }
  @media (min-width: 650px) {
    border-left: 1.5px solid var(--color-text-light);
  }
}

